-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b92
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8143458 | emb-9 | Dean Long | P2 | Resolved | Fixed | team |
# Internal Error (/opt/jprt/T/P1/171921.vlivanov/s/hotspot/src/share/vm/opto/library_call.cpp:2418), pid=13506, tid=13535
# assert(is_native_ptr || alias_type->adr_type() == TypeOopPtr::BOTTOM || alias_type->field() != __null || alias_type->element() != __null) failed: field, array element or unknown
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151020171921.vlivanov.hs-comp9-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151020171921.vlivanov.hs-comp9-b00, compiled mode, tiered, compressed oops, g1 gc, linux-aarch64)
# assert(is_native_ptr || alias_type->adr_type() == TypeOopPtr::BOTTOM || alias_type->field() != __null || alias_type->element() != __null) failed: field, array element or unknown
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20151020171921.vlivanov.hs-comp9-b00)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20151020171921.vlivanov.hs-comp9-b00, compiled mode, tiered, compressed oops, g1 gc, linux-aarch64)
- backported by
-
JDK-8143458 assert(is_native_ptr || alias_type->adr_type() == TypeOopPtr::BOTTOM || alias_type->field() != __null || alias_type->element() != __null) failed: field, array element or unknown
-
- Resolved
-
- relates to
-
JDK-8136473 failed: no mismatched stores, except on raw memory: StoreB StoreI
-
- Closed
-
-
JDK-8153356 NullCheckDroppingsTest.java fails with "assert(alias_type->adr_type()..."
-
- Closed
-